--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "content/themes/casper"]
 	path = content/themes/casper
-url=git://github.com/kaychaks/casper.git
+	url=git://github.com/kaychaks/casper.git
+
+[submodule "content/themes/Vapor"]
+	path = content/themes/Vapor
+	url=git://github.com/kaychaks/Vapor.git
